[package]
name = "srt-bonding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
srt-protocol = { path = "../srt-protocol" }
bytes = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
srt-io = { path = "../srt-io" }
proptest = { workspace = true }
