[package]
name = "srt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
srt-protocol = { path = "../srt-protocol" }
srt-bonding = { path = "../srt-bonding" }
srt-crypto = { path = "../srt-crypto" }
srt-io = { path = "../srt-io" }
bytes = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
